fixes background image and alignment for about page

--- a/app/assets/stylesheets/_about.scss
+++ b/app/assets/stylesheets/_about.scss
@@ -1,5 +1,5 @@
 #about {
-  background: linear-gradient(rgba(255,255,255,0.9)), url(whiteflowers.png) fixed center;
+  background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255,255,255,0.9)), url(whiteflowers.png) fixed center center;
   padding: 80px 0;
   background-size: cover;
 
@@ -16,5 +16,59 @@
     &:last-child {
       margin-bottom: 0;
     }
+  }
+  .about-item {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    height: 260px;
+    width: 100%;
+    display: table;
+    overflow: hidden;
+    margin-bottom: 30px;
+    border: solid 10px;
+    border-color: #b3b3b3;
+  }
+  .about-item .details {
+    height: 260px;
+    background: #fff;
+    display: table-cell;
+    vertical-align: middle;
+    opacity: 0;
+    transition: 0.3s;
+    text-align: center;
+  }
+  .about-item .details h4 {
+    font-size: 16px;
+    transition: opacity 0.3s, -webkit-transform 0.3s;
+    transition: transform 0.3s, opacity 0.3s;
+    transition: transform 0.3s, opacity 0.3s,
+    -webkit-transform 0.3s;
+    -webkit-transform: translate3d(0, -15px, 0);
+    transform: translate3d(0, -15px, 0);
+    font-weight: 700;
+    color: #333333;
+  }
+  .about-item .details span {
+    display: block;
+    color: #666666;
+    font-size: 13px;
+    transition: opacity 0.3s, -webkit-transform 0.3s;
+    transition: transform 0.3s, opacity 0.3s;
+    transition: transform 0.3s, opacity 0.3s, -webkit-transform 0.3s;
+    -webkit-transform: translate3d(0, 15px, 0);
+    transform: translate3d(0, 15px, 0);
+  }
+  .about-item:hover .details {
+    opacity: 0.8;
+  }
+  .about-item:hover .details h4 {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .about-item:hover .details span {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 }
